<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       android:id="@+id/nestedScrollView"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:background="@color/colorBackground"
                                       android:paddingBottom="20dp"
                                       android:paddingLeft="20dp"
                                       android:paddingRight="20dp"
                                       android:paddingTop="20dp"
                                       tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="170dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/campaign" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutRegno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextRegno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regno"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCgparank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextCgparank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cgpa_rank"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextRoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/roomtype"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/block"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAcnonac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextAcnonac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/acornon"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="Add Campaign" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
